umami/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami
  namespace: umami-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "HeaderRegexp(`Referer`, `^https?:\\/\\/(?:[a-zA-Z0-9\\-\\.]+\\.)?mtaha\\.dev`) && (Method(`POST`) || Method(`OPTIONS`)) && Host(`umami.mtaha.dev`) && PathPrefix(`/api`)"
      priority: 10
      services:
        - kind: Service
          name: umami-web
          namespace: umami-k8s
          passHostHeader: true
          port: 3000
          scheme: http
    - kind: Rule
      match: "Host(`umami.mtaha.dev`) && PathPrefix(`/`)"
      priority: 11
      services:
        - kind: Service
          name: umami-web
          namespace: umami-k8s
          passHostHeader: true
          port: 3000
          scheme: http
  tls:
    domains:
      - main: umami.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
